laborations/lab2/testsuite/good/core109.cc
int main() {
  int j = 4;

  { 
	printInt(j);
  }

  return j;
}

//void printInt(int x) { }
